# VerAxNN

./: README.md  pyproject.toml
scripts/: qmacverify.py
src/qmacverify/: __init__.py
src/qmacverify/approx_ops/: aadd32.py  amul8x8.py  registry.py
src/qmacverify/config/: default_quant_spec.json  quant_spec.py
src/qmacverify/constraints/: D_schema.py  extract_D.py  interval_bounds.py
src/qmacverify/experiments/: compare_outputs.py  demo_pipeline.py  metrics.py
src/qmacverify/export/: export_quantized.py  graph_schema.py  pack_npz.py
src/qmacverify/models/: build_and_train_stub.py  cnn_small.py  resnet20_cifar.py
src/qmacverify/opcheck/: compare_ops.py  gen_vectors.py  opcheck_cli.py  run_iverilog.py
src/qmacverify/rtl/: aadd32.v  amul8x8.v  tb_aadd32.v  tb_amul8x8.v
src/qmacverify/runner/: __init__.py  int_math.py  ops_exact.py  run_approx_int.py  run_exact_int.py
src/qmacverify/scripts/: qmacverify.py
tests/: test_amul_aadd_python.py  test_int_math.py  test_opcheck_parsing.py  test_runner_smoke.py
