[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmacverify"
version = "0.1.0"
description = "Quantized MAC verification framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
qmacverify = "qmacverify.scripts.qmacverify:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
